tests/testfiles/invalid/conditional/syntax_error_if.c
int main() {
    int a = 1;
    int b = 2;
    if a == b {
        a = 2;
    } else {
        a = 3;
    }
    return a;
}
